--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <base href="http://felicitywestmacott.co.uk" />
+    <!-- <base href="http://felicitywestmacott.co.uk" /> -->
     <link href="site.css" rel="stylesheet" type="text/css" />
 
     <title>{{ include.title }}</title>
