Adding content to index page and footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,14 @@
 <!-- Footer Start -->
     </div>
+
+
+<div style="text-align: center; margin: 20px; font-size:smaller; color:gray;">
+    Website by
+    <a href="http://peter.westmacott.me.uk" style="font-style: normal; color:gray;">
+        Peter
+    </a>
+    - &copy; 2011 - 2013
+</div>
+
   </body>
 </html>
