Adding contact page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -91,4 +91,11 @@
 
     </div>
     <div class="content">
+
+        <div class="header" style="text-align: center;">
+            <img alt="Felicity Westmacott - Bespoke Dressmaker 01737 773 282"
+                 style="max-width: 100%;"
+                 src="http://felicitywestmacott.co.uk/graphics/headerIndex.png" />
+        </div>
+
 <!-- Header End -->
