Changed title of contact page and dynamised copyright year.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <a href="http://peter.westmacott.me.uk" style="font-style: normal; color:gray;">
         Peter
     </a>
-    - &copy; 2011 - 2013
+    - &copy; 2011 - {{ site.time | date: %Y }}
 </div>
 
   </body>
