--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,16 @@
 
 {% include header.html %}
 
-{{ content }}
+<div class="content">
+
+    <div class="header" style="text-align: center;">
+        <img alt="Felicity Westmacott - Bespoke Dressmaker 01737 773 282"
+             style="max-width: 100%;"
+             src="{{ site.baseimageref }}graphics/headerIndex.png" />
+    </div>
+
+    {{ content }}
+
+</div>
 
 {% include footer.html %}
