--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -78,7 +78,17 @@ div.dividertxt {
     display: inline-block;
     font-size: 70px;
     color: #888;
+
+    transform-origin: top left;
+    -ms-transform-origin: top left;
+    -o-transform-origin: top left;
+    -moz-transform-origin: top left;
     -webkit-transform-origin: top left;
+
+    transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
 }
 
