--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -90,6 +90,8 @@ div.dividertxt {
     -o-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
+
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
 /***** DEBUG  ****/
