Improved correctness of HTML on landing page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
         Home
       </span>
       {% else %}
-      <a href="index.html" alt="Felicity Westmacott - Bespoke Dress Maker" target="">
+      <a href="index.html" title="Felicity Westmacott - Bespoke Dress Maker">
         Home
       </a>
       {% endif %}
@@ -43,7 +43,7 @@
         Gallery
       </span>
       {% else %}
-      <a href="portfolio/portfolio.html" alt="Pictures of Happy Clients" target="">
+      <a href="portfolio/portfolio.html" title="Pictures of Happy Clients">
         Gallery
       </a>
       {% endif %}
@@ -54,7 +54,7 @@
         Testimonials
       </span>
       {% else %}
-      <a href="thankyous.html" alt="Testimonials and Thank You messages" target="">
+      <a href="thankyous.html" title="Testimonials and Thank You messages">
         Testimonials
       </a>
       {% endif %}
@@ -65,7 +65,7 @@
         F.A.Q.
       </span>
       {% else %}
-      <a href="ordering.html" alt="Ordering your Bespoke Wedding Dress" target="">
+      <a href="ordering.html" title="Ordering your Bespoke Wedding Dress">
         F.A.Q.
       </a>
       {% endif %}
@@ -76,7 +76,7 @@
         Contact
       </span>
       {% else %}
-      <a href="contact.html" alt="Contact details and about me" target="">
+      <a href="contact.html" title="Contact details and about me">
         Contact
       </a>
       {% endif %}
@@ -87,7 +87,7 @@
         Links
       </span>
       {% else %}
-      <a href="links.html" alt="Links to other sites" target="">
+      <a href="links.html" title="Links to other sites">
         Links
       </a>
       {% endif %}
@@ -98,7 +98,7 @@
         Facebook
       </span>
       {% else %}
-      <a href="http://www.facebook.com/pages/Felicity-Westmacott-Bespoke-Dressmaker/33628074097" alt="Visit me on Facebook" target="_blank">
+      <a href="http://www.facebook.com/pages/Felicity-Westmacott-Bespoke-Dressmaker/33628074097" title="Visit me on Facebook" target="_blank">
         Facebook
       </a>
       {% endif %}
